Released db-feature