@@ -1,8 +1,12 @@
 package backend.academy.bot.converter;
 
+import static backend.academy.bot.fsm.Constants.FILTERS;
+import static backend.academy.bot.fsm.Constants.TAGS;
+import static backend.academy.bot.fsm.Constants.URL;
+
 import backend.academy.bot.domain.ChatContext;
-import backend.academy.bot.fsm.MessageConstants;
 import backend.academy.dto.dto.AddLinkRequest;
+import java.util.Collections;
 import java.util.List;
 import org.jetbrains.annotations.NotNull;
 import org.springframework.core.convert.converter.Converter;
@@ -12,13 +16,11 @@ import org.springframework.stereotype.Component;
 public class ChatContextToAddLinkRequestConverter implements Converter<ChatContext, AddLinkRequest> {
     @Override
     public AddLinkRequest convert(@NotNull ChatContext context) {
-        String tempTags = context.attributes().getOrDefault(MessageConstants.TAGS, "");
-        List<String> tags = tempTags.isEmpty() ? List.of() : List.of(tempTags.split(" "));
-
-        String tempFilters = context.attributes().getOrDefault(MessageConstants.FILTERS, "");
-        List<String> filters = tempFilters.isEmpty() ? List.of() : List.of(tempFilters.split(" "));
-
-        String url = context.attributes().get(MessageConstants.URL);
+        String url = (String) context.attributes().get(URL);
+        @SuppressWarnings("unchecked")
+        List<String> tags = (List<String>) context.attributes().getOrDefault(TAGS, Collections.emptyList());
+        @SuppressWarnings("unchecked")
+        List<String> filters = (List<String>) context.attributes().getOrDefault(FILTERS, Collections.emptyList());
         return new AddLinkRequest(url, tags, filters);
     }
 }
